闭包的概念

--- a/summarize/EveryDay/log.html
+++ b/summarize/EveryDay/log.html
@@ -1,6 +1,6 @@
 <script>
 /*
-*请描述一下 cookies，sessionStorage 和 localStorage 的区别？
+*###请描述一下 cookies，sessionStorage 和 localStorage 的区别？
 *   数据生命周期：
 *       cookie生成时指定maxAge值，默认关闭浏览器失效；
 *       sessionStorage页面会话期可用；
@@ -23,4 +23,22 @@
 *       secure;(secure表安全级别）
 *   cookie 是存储于访问者的计算机中的变量。
 */	 
+</script>
+
+<script>
+/*
+*####什么是闭包？
+*   闭包就是能够读取其他函数内部变量的函数
+*   闭包可以理解成定义在一个函数内部的函数。
+*   本质上，闭包就是将函数内部和函数外部连接起来的桥梁。
+*
+*   闭包的作用：
+*       读取函数内部变量；
+*       让这些变量的值始终保持在内存中，不会再函数调用后自动清除。
+*
+*   闭包注意点：
+*       闭包会使变量都被保存在内存中，内存消耗大，影响网页性能，在ie中可能导致内存泄漏。
+*           解决办法：退出函数前，将不使用的局部变量删除。
+*       闭包会在父函数外部，改变父函数内部变量的值。
+*/
 </script>
