--- a/summarize/EveryDay/log.html
+++ b/summarize/EveryDay/log.html
@@ -42,3 +42,11 @@
 *       闭包会在父函数外部，改变父函数内部变量的值。
 */
 </script>
+
+<script>
+/*
+####当我们打开一个网页，浏览器做了什么？
+	1、生成DOM树
+	2、使用CSS创建CSS对象模型
+*/	
+</script>
