--- a/project/spaceMe/index.html
+++ b/project/spaceMe/index.html
@@ -1,55 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>我的空间</title>
-	<meta charset="utf-8">
-	<link rel="shortcut icon" href="./src/theme/imgs/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="src/theme/css/base.css">
-	<link rel="stylesheet" type="text/css" href="src/theme/css/common.css">
-	<script src="lib/jquery-3.1.1.js"></script>
+    <title>我的空间</title>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="./src/theme/imgs/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="src/theme/css/base.css">
+    <link rel="stylesheet" type="text/css" href="src/theme/css/common.css">
+    <script src="lib/jquery-3.1.1.js"></script>
 </head>
 <body>
-	<div class="w-100 h-100">
-		<!-- 公用头部 -->
-		<div class="head"></div>
-		<script type="text/javascript">
-			$('.head').load('./src/html/head/head.html');
-		</script>
+    <div class="w-100 h-100">
+        <!-- 公用头部 -->
+        <div class="head"></div>
+        <script type="text/javascript">
+            $('.head').load('./src/html/head/head.html');
+        </script>
 
-		<!-- 主体内容 -->
-		<div class="main main-bg">
-			<div class="login">
-				<form class="p30 fz16">
-					<fieldset>
-						<legend class="tc fz20">
-							登录Jiex的空间
-						</legend>
-						<hr>
-						<div class="mt50 login-item">
-							<label for="name">账号：</label>
-							<input type="text" name="login_name" class="login-item-input" id="login_name">
-						</div>
-						<div class="mt20 login-item">
-							<label for="pwd">密码：</label>
-							<input type="password" name="login_pwd" class="login-item-input" id="login_pwd">
-						</div>
-						<div class="mt20 login-item fz0">
-							<input type="button" name="login_submit" value="登录" class="mr10 cursor" id="login_submit">
-							<input type="button" name="login_register" value="注册" class="cursor" id="login_register">
-						</div>
-					</fieldset>
-				</form>
-			</div>
-		</div>
+        <!-- 主体内容 -->
+        <div class="main main-bg">
+            <div class="login">
+                <form class="p30 fz16">
+                    <fieldset>
+                        <legend class="tc fz20">
+                            登录Jiex的空间
+                        </legend>
+                        <hr>
+                        <div class="mt50 login-item">
+                            <label for="name">用户名：</label>
+                            <input
+                                type="text"
+                                name="login_name"
+                                class="login-item-input"
+                                id="login_name"
+                                placeholder="请输入用户名"
+                                oninput="vm.nameModel.oninput()"
+                                onBlur="vm.nameModel.blur()">
+                        </div>
+                        <div class="mt20 login-item">
+                            <label for="pwd">密码：</label>
+                            <input
+                                type="password"
+                                name="login_pwd"
+                                class="login-item-input"
+                                id="login_pwd"
+                                placeholder="请输入密码"
+                                oninput="vm.pwdModel.oninput()"
+                                onBlur="vm.pwdModel.blur()">
+                        </div>
+                        <div class="mt20 login-item fz0">
+                            <input
+                                type="button"
+                                name="login_submit"
+                                value="登录"
+                                class="mr10 cursor"
+                                id="login_submit"
+                                onclick="vm.submit()">
+                            <input
+                                type="button"
+                                name="login_register"
+                                value="注册"
+                                class="cursor"
+                                id="login_register"
+                                onclick="vm.register()">
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
 
-		<!-- 公用底部 -->
-		<div class="foot"></div>
-		<script type="text/javascript">
-			$('.foot').load('./src/html/foot/foot.html');
-		</script>
+        <!-- 公用底部 -->
+        <div class="foot"></div>
+        <script type="text/javascript">
+            $('.foot').load('./src/html/foot/foot.html');
+        </script>
 
-		<script src="./src/js/head.js"></script>
-		<script src="./src/js/login.js"></script>
-	</div>
+        <script src="./src/service/ajaxService.js"></script>
+        <script src="./src/service/tipMsgService.js"></script>
+        <script src="./src/js/head.js"></script>
+        <script src="./src/js/login.js"></script>
+    </div>
 </body>
 </html>
