添加跳转主页面

--- a/project/spaceMe/index.html
+++ b/project/spaceMe/index.html
@@ -3,17 +3,17 @@
 <head>
     <title>我的空间</title>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="./src/theme/imgs/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="src/theme/css/base.css">
-    <link rel="stylesheet" type="text/css" href="src/theme/css/common.css">
-    <script src="lib/jquery-3.1.1.js"></script>
+    <link rel="shortcut icon" href="http://localhost:8080/src/theme/imgs/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="http://localhost:8080/src/theme/css/base.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8080/src/theme/css/common.css">
+    <script src="http://localhost:8080/lib/jquery-3.1.1.js"></script>
 </head>
 <body>
     <div class="w-100 h-100">
         <!-- 公用头部 -->
         <div class="head"></div>
         <script type="text/javascript">
-            $('.head').load('./src/html/head/head.html');
+            $('.head').load('http://localhost:8080/src/html/head/head.html');
         </script>
 
         <!-- 主体内容 -->
@@ -81,13 +81,13 @@
         <!-- 公用底部 -->
         <div class="foot"></div>
         <script type="text/javascript">
-            $('.foot').load('./src/html/foot/foot.html');
+            $('.foot').load('http://localhost:8080/src/html/foot/foot.html');
         </script>
 
-        <script src="./src/service/ajaxService.js"></script>
-        <script src="./src/service/tipMsgService.js"></script>
-        <script src="./src/js/head.js"></script>
-        <script src="./src/js/login.js"></script>
+        <script src="http://localhost:8080/src/service/ajaxService.js"></script>
+        <script src="http://localhost:8080/src/service/tipMsgService.js"></script>
+        <script src="http://localhost:8080/src/js/head.js"></script>
+        <script src="http://localhost:8080/src/js/login.js"></script>
     </div>
 </body>
 </html>
