--- a/summarize/Frame/test.html
+++ b/summarize/Frame/test.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test</title>
-	<script type="text/javascript" src="frameMe.js"></script>
+    <title>Test</title>
+    <script type="text/javascript" src="frameMe.js"></script>
 </head>
 <body>
-	<script type="text/javascript">
-		var arr = ['aBc', 'abc', 'Abc', '123'];
-		sortArrIn_aToA(arr);
-		console.log(arr);
-	</script>
+    <script type="text/javascript">
+        var arr = [16,25,37,29,11,75,32,1];
+        var result = bubbleSort(arr);
+        console.log(result);
+    </script>
 </body>
 </html>
