--- a/project/spaceMe/index.html
+++ b/project/spaceMe/index.html
@@ -9,7 +9,7 @@
     <script src="http://localhost:8080/lib/jquery-3.1.1.js"></script>
 </head>
 <body>
-    <div class="w-100 h-100">
+    <div class="w-100 h-100 pa">
         <!-- 公用头部 -->
         <div class="head"></div>
         <script type="text/javascript">
