--- a/summarize/EveryDay/log.html
+++ b/summarize/EveryDay/log.html
@@ -109,9 +109,39 @@
                 a：服务器端需要改动适配
                 b：只支持get方法
                 c：不是xhr请求，不支持异步和一些事件
-        3、跨域云（例如A、B域名）：
-            a：被调用方--支持跨域，B返回字段告诉浏览器，允许A进行跨域访问，浏览器通过校验，不报错
+        3、跨域（例如A、B域名）：
+            a：被调用方--支持跨域，B在响应头增加字段告诉浏览器，允许A进行跨域访问，浏览器通过校验，不报错
             b：调用方--隐藏跨域，通过代理，把A域名的请求转换成B域名的请求
 
+</pre>
+
+<pre>
+    <h3>http协议</h3>
+    HTTP协议是Hyper Text Transfer Protocol（超文本传输协议）的缩写，是用于从万维网（WWW:World Wide Web ）服务器传输超文本到本地浏览器的传送协议。
+    HTTP是一个基于TCP/IP通信协议来传递数据。
+    主要特点：
+        1、简单快速：客户像服务器请求服务时，只需传送请求方法和路径；
+        2、灵活：http允许传输任意类型的数据对象，由Content-Type加以标记；
+        3、无连接：限制每次连接只处理一个请求；
+        4、无状态：对于事务处理没有记忆能力，如果后续处理需要前面的信息，则它必须重传。
+
+</pre>
+
+
+<pre>
+    <h3>一个完整的URL包括？</h3>
+    1、协议：如http，在后面加"//"为分隔符
+    2、域名：也可以使用ip作为域名
+    3、端口：端口跟在域名后边，使用":"作为分隔符。端口不是必须部分，如果省略，将采用默认端口
+    4、虚拟目录：从域名后第一个"/"到最后一个"/"，非必须
+    5、文件名：非必须
+    6、锚：从"#"到最后，非必须
+    7、参数：从"?"到"#"，使用"&"分隔
+</pre>
+
+<pre>
+    <h3>get和post区别？</h3>
+    1、get请求参数附在url后，存在安全性问题。post请求数据放在http包的包体中
+    2、传输大小的限制。浏览器对URL长度有限制。
 </pre>
 <hr>
