--- a/project/vueDemo/FrameUI/public/index.html
+++ b/project/vueDemo/FrameUI/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-sum</title>
+    <title>Frame-UI</title>
   </head>
   <body>
     <noscript>
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="<%= BASE_URL %>lib/FeFrame.js"></script>
   </body>
 </html>
